Spec A implemented
